# harnesstalk-bridge

./: .gitignore  README.md  SPEC.md  TASK.md  pyproject.toml  server.py
.context/: decisions.md  history.md  notes.md
adapters/: __init__.py  base.py  claude_api.py  hermes.py  openclaw.py
bridge/: __init__.py  audit.py  config.py  protocol.py  registry.py  sessions.py  streaming.py
config/: targets.toml
systemd/: agent-bridge.service
tests/: conftest.py  test_claude_api_adapter.py  test_core.py  test_health_state_machine.py  test_hermes_native.py  test_server.py  test_streaming.py  test_tui_client.py  test_tui_filters.py  test_tui_smoke.py
tui/: __init__.py  __main__.py  app.py  client.py  styles.tcss  theme.py
tui/widgets/: __init__.py  audit_panel.py  sessions_panel.py  status_bar.py  targets_panel.py
