[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-bridge-mcp"
version = "0.1.0"
description = "Local MCP bridge for inter-agent consultation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
agent-bridge = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["adapters", "bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
